Added Posts Dynamically to Template

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,15 @@
     </title>
 
 </head>
+    <div>
+        <h1> Post_List_Testing </h1>
+    </div>
 
-
-
+    {% for post in posts %}
+        <div>
+            <p> Published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
 </html>
