--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,7 @@
     </title>
 
 </head>
+<body>
     <div>
         <h1> Post_List_Testing </h1>
     </div>
@@ -18,4 +19,5 @@
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
+</body>
 </html>
