--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,7 +1,12 @@
 h1 a {
+    padding-left: 10px;
     color: #B500ff
 }
 
-h2 a {
+h2 a{
     color: #C25100
+}
+
+h2 a, p, .iframeVidDiv{
+    padding-left: 15px;
 }
