--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,12 +1,35 @@
-h1 a {
-    padding-left: 10px;
-    color: #B500ff
+.main-container {
+    position: relative;
+    top: 0px;
+    padding: 0px;
+    margin: 0px;
 }
 
-h2 a{
-    color: #C25100
+.page-header {
+    background-color: rgb(241, 241, 241);
+    padding-top: 0%;
+    margin: 0px;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-h2 a, p, .iframeVidDiv{
+.page-header h1 a {
+    color: black;
+    font-family: 'Lobster';
+    font-size: 50px;
+}
+
+.page header h1 a:hover {
+    text-decoration: underline;
+}
+
+.content-container {
     padding-left: 15px;
+}
+
+.post h2 a {
+    color: rgb(80, 161, 253);
 }
