--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    {% for post in posts %}
+    {% for post in post %}
         <div class="post">
-            <h2><a href="">{{ post.title }}</a></h2>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p class="post-desc">{{ post.text|linebreaksbr }}</p>
             <div class="post-video">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
