--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,12 +2,15 @@
 
 {% block content %}
     <div class="post">
+        {% endif %}
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+        <div class="post-video">
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
+        </div>
         {% if post.published_date %}
         <div class="post-date">
             {{ post.published_date }}
         </div>
-        {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
