--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,8 +19,10 @@
 
             <div class="content-container">
                 <div class="blog-post">
-                    {% block content %}
-                    {% endblock %}
+                    <div class="col-md-8">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
         </div>
