--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,10 +12,22 @@
         <div class="main-container">
             <div class="page-header">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                    <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                    <div class="tool-bar">
+                        <h1><a href="/admin/logout" class="tool">Log Out</a></h1>
+                    </div>
+                {% else %}
+                    <div class="tool-bar">
+                        <h1><a href="/admin/login" class="tool">Log In</a></h1>
+                    </div>
                 {% endif %}
-                <h1><a href="/">Portfolio</a></h1>
+                <h1><a href="/" id="page-title">Portfolio</a></h1>
+                {% if user.is_authenticated %}
+                    <div class="icon-bar">
+                        <a href="{% url 'post_new' %}" class="menu-icon"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="{% url 'post_draft_list' %}" class="menu-icon"><span class="glyphicon glyphicon-edit"></span></a>
+                    </div>
+                {% endif %}
+                
             </div>
 
             <div class="content-container">
