--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}" class="post-title">{{ post.title }}</a></h2>
             <p class="post-desc">{{ post.text|linebreaksbr }}</p>
             <div class="post-video">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
