--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@600&display=swap');
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Advent Pro', Arial, sans-serif;
+}
+
 .main-container {
     position: relative;
     top: 0px;
@@ -17,17 +21,27 @@
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+    grid-template: 1fr / repeat(5, 1fr);
+    position: fixed;
+    z-index: 5;
+}
+
+.page-header a:hover {
+    text-decoration: underline;
+    color: rgba(70, 70, 70, 0.8);
 }
 
 #page-title {
     color: black;
-    font-family: 'Advent Pro';
     font-size: 50px;
     margin: 0px 500px;
     font-weight: bold;
     letter-spacing: 0.1em;
     grid-column: 3 / span 1;
+}
+
+#page-title:hover {
+    text-decoration: none;
 }
 
 .tool-bar {
@@ -37,7 +51,6 @@
 
 .tool {
     color: black;
-    font-family: 'Advent Pro', sans-serif;
     letter-spacing: 0.3em;
 }
 
@@ -54,7 +67,6 @@
 
 .post-title {
     color: black;
-    font-family: 'Advent Pro', sans-serif;
     letter-spacing: 0.05em;
     font-weight: bold;
 }
@@ -64,10 +76,7 @@
     text-decoration: underline;
 }
 
-.page header h1 a:hover {
-    text-decoration: underline;
-}
-
 .content-container {
     padding-left: 15px;
+    padding-top: 100px;
 }
