--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="post">
-        <h2>{{ post.title }}</h2>
+        <h2 class="title-no-link">{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
         <div class="post-video">
             <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
