--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
@@ -13,11 +15,11 @@
             <div class="page-header">
                 {% if user.is_authenticated %}
                     <div class="tool-bar">
-                        <h1><a href="/admin/logout" class="tool">Log Out</a></h1>
+                        <h1><a href="{% url 'logout' %}" class="tool">Log Out</a></h1>
                     </div>
                 {% else %}
                     <div class="tool-bar">
-                        <h1><a href="/admin/login" class="tool">Log In</a></h1>
+                        <h1><a href="{% url 'login' %}" class="tool">Log In</a></h1>
                     </div>
                 {% endif %}
                 <h1><a href="/" id="page-title">Portfolio</a></h1>
@@ -28,6 +30,11 @@
                     </div>
                 {% endif %}
                 
+                {% if user.is_authenticated %}
+                    <div class="user-greeting">
+                        <h4>Greetings {{ user.username }}!</h4>
+                    </div>
+                {% endif %}
             </div>
 
             <div class="content-container">
@@ -40,4 +47,6 @@
             </div>
         </div>
     </body>
+
+    <script src="{% static 'scripts/script.js' %}"></script>
 </html>
