--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -65,20 +65,10 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 45px;
 }
 
-.post-title {
-    color: black;
-    letter-spacing: 0.05em;
-    font-weight: bold;
-}
-
-.post-title:hover {
-    color: rgba(70, 70, 70, 0.8);
-    text-decoration: underline;
-}
-
 .content-container {
     padding-left: 15px;
     padding-top: 100px;
+    width: 100%;
 }
 
 .title-no-link {
@@ -92,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
 .user-greeting {
     width: 100%;
     height: 40px;
-    background-color: rgb(50, 0, 200);
+    background-color: rgb(120, 120, 120);
     color: white;
     text-align: center;
     grid-area: 2 / 1 / span 1 / span 5;
@@ -101,4 +91,65 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     letter-spacing: 1em;
     font-weight: bold;
+}
+
+.post {
+    height: 450px;
+    width: 100%;
+    display: grid;
+    grid-template: 125px 125px 1fr / repeat(5, 1fr);
+    align-items: center;
+    justify-content: center;
+}
+
+.blog-post, .col-md-8 {
+    width: 100%;
+}
+
+.banner {
+    grid-area: 1 / 1 / span 2 / span 5;
+}    
+
+.post-title {
+    letter-spacing: 0.05em;
+    font-weight: bold;
+    grid-area: 2 / 3 / span 1 / span 3;
+    z-index: 5;
+}
+
+.post-title h2 a {
+    color: rgba(188, 188, 188, 1);
+    font-weight: bold;
+    font-size: 40px;
+    letter-spacing: 0.35em;
+}
+
+.post-title h2 a:hover {
+    text-decoration: none;
+}
+
+.post-video {
+    grid-area: 2 / 1 / span 1 / span 1;
+    justify-self: end;
+}
+
+.post-iframe {
+    width: 350px;
+    height: 300px;
+}
+
+.post-desc {
+    grid-area: 3 / 3 / span 1 / span 2;
+    font-size: 17px;
+}
+
+.post-date {
+    grid-area: 3 / 1 / span 1 / span 1;
+    justify-self: center;
+}
+
+.col-md-8 {
+    display: grid;
+    grid-template: 1fr / 1fr;
+    grid-auto-rows: 450px;
 }
