--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,19 +1,21 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="post">
-        <h2 class="title-no-link">{{ post.title }}</h2>
+    <div class="post-detail">
+        <div class="post-title">
+            <h2 class="title-no-link">{{ post.title }}</h2>
+        </div>
         <p>{{ post.text|linebreaksbr }}</p>
         <div class="post-video">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
+            <iframe class="post-iframe"width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
         </div>
         {% if post.published_date %}
-        <div class="post-date">
-            {{ post.published_date }}
-        </div>
-        {% else %}
-            <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
-        {% endif %}
+            <div class="post-date">
+                {{ post.published_date }}
+            </div>
+            {% else %}
+                <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+            {% endif %}
         {% if user.is_authenticated %}
             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
             <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
