--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="post">
+        <div class="post-draft">
             <h1><a href="{% url 'post_detail' pk=post.pk %}" class="post-title">{{ post.title }}</a></h1>
             <div class="post-video">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
