--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,12 +3,19 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <h2><a href="{% url 'post_detail' pk=post.pk %}" class="post-title">{{ post.title }}</a></h2>
-            <p class="post-desc">{{ post.text|linebreaksbr }}</p>
-            <div class="post-video">
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
+            <img class="banner" src="../../static/res/Banner.png">
+            <div class="post-title">
+                <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             </div>
-            <p class="post-date">Published: {{ post.published_date }}</p>
+            <div class="post-desc">
+                <p>{{ post.text|linebreaksbr|truncatewords:20 }}</p>
+            </div>
+            <div class="post-video">
+                <iframe class="post-iframe" width="420" height="315" src="https://www.youtube.com/embed/{{ post.video_id }}"></iframe>
+            </div>
+            <div class="post-date">
+                <p>Published: {{ post.published_date }}</p>
+            </div>
         </div>
     {% endfor %}
 {% endblock %}
