--- a/blog/templates/blog/project_detail.html
+++ b/blog/templates/blog/project_detail.html
@@ -11,6 +11,9 @@
                 <iframe class="post-iframe"width="420" height="315" src="https://www.youtube.com/embed/{{ project.video_id }}"></iframe>
             </div>
         {% endif %}
+        <div class="github-link">
+            <h3><a href="https://www.github.com/CraigTheCrag/{{ project.github_title }}">Github</a></h3>
+        </div>
         {% if project.published_date %}
             <div class="post-date">
                 {{ project.published_date }}
