--- a/blog/templates/blog/project_draft_list.html
+++ b/blog/templates/blog/project_draft_list.html
@@ -4,7 +4,7 @@
     {% for project in projects %}
         <div class="post-draft">
             <h1><a href="{% url 'project_detail' pk=project.pk %}" class="post-title">{{ project.title }}</a></h1>
-            if {% project.video_id %}
+            {% if project.video_id %}
                 <div class="post-video">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ project.video_id }}"></iframe>
                 </div>
