--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,6 +5,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Advent Pro', Arial, sans-serif;
 }
 
+p {
+    font-size: 18px;
+}
+
 .main-container {
     position: relative;
     top: 0px;
@@ -13,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page-header {
-    background-color: rgb(241, 241, 241);
+    background-color: rgba(241, 241, 241, 1);
     padding-top: 0%;
     margin: 0px;
     height: 100px;
@@ -21,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-template: 1fr 25px / repeat(5, 1fr);
+    grid-template: 1fr 25px / repeat(5, 20%);
     position: fixed;
     z-index: 5;
 }
@@ -31,32 +35,41 @@ h1, h2, h3, h4, h5, h6 {
     color: rgba(70, 70, 70, 0.8);
 }
 
-#page-title {
-    color: black;
-    font-size: 50px;
-    margin: 0px 500px;
-    font-weight: bold;
-    letter-spacing: 0.1em;
+.page-title {
     grid-area: 1 / 3 / span 1 / span 1;
+    margin: auto;
 }
 
-#page-title:hover {
+.page-title h1 a{
+    color: black;
+    font-size: 50px;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+}
+
+.page-title h1 a:hover {
     text-decoration: none;
 }
 
 .tool-bar {
+    width: 100%;
+    height: auto;
     text-align: center;
-    grid-area: 1 / 1 / span 1 / span 2;
+    grid-area: 1 / 1 / span 1 / span 1;
 }
 
 .tool {
+    width: 100%;
+    height: auto;
     color: black;
     letter-spacing: 0.3em;
 }
 
 .icon-bar, .nav-bar {
+    width: 100%;
+    height: auto;
     text-align: center;
-    grid-area: 1 / 4 / span 1 / span 2;
+    grid-area: 1 / 5 / span 1 / span 1;
 }
 
 .menu-icon, .nav-text {
@@ -199,12 +212,15 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: underline;
 }
 
+.profile-pic {
+    text-align: center;
+}
+
 .profile-pic a img {
     border-radius: 50%;
     border-width: 5px;
     border-style: solid;
     border-color: rgba(150, 150, 150, 0.5);
-    display: block;
     width: 200px;
     height: 200px;
     margin-left: auto;
@@ -214,14 +230,35 @@ h1, h2, h3, h4, h5, h6 {
 
 .data-container {
     padding-top: 50px;
+    display: block;
+}
+
+.about-container {
+    width: 60%;
+    height: 400px;
+    text-align: center;
+    margin: 0 auto;
     display: grid;
-    grid-template: 1fr / repeat(2, 1fr);
+    grid-template: 12.5% 87.5% / 1fr;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgba(50, 50, 50, 0.5);
+    border-radius: 15px;
 }
 
-.personal-data-container {
-    grid-area: 1 / 1 / span 1 / span 1;
+.about-me-title {
+    background-color: rgba(70, 70, 70, 0.8);
+    grid-template-areas: 1 / 1 / span 1 / span 1;
+    border-radius: 10px;
 }
 
-.other-data-container {
-    grid-area: 1 / 2 / span 1 / span 1;
+.about-me-title h2 {
+    color: rgba(241, 241, 241, 1);
+    letter-spacing: 0.2em;
+    margin: 10px auto;
+}
+
+.about-me-txt {
+    grid-template-areas: 2 / 1 / span 1 / span 1;
+    padding: 0.5% 0.25%;
 }
