--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="main-container">
@@ -22,8 +24,9 @@
                         <h1><a href="{% url 'login' %}" class="tool">Log In</a></h1>
                     </div>
                 {% endif %}
-                <h1><a href="/" id="page-title">Portfolio</a></h1>
-
+                <div class="page-title">
+                    <h1><a href="{% url 'homepage' %}" id="page-title">Portfolio</a></h1>
+                </div>
                 <div class="nav-bar">
                     <a href="{% url 'post_list' %}" class="nav-text">Posts</a>
                     <a href="{% url 'project_list' %}" class="nav-text">Projects</a>
