--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -8,11 +8,13 @@
             </a>
         </div>
         <div class="data-container">
-            <div class="personal-data-container">
-
-            </div>
-            <div class="other-data-container">
-
+            <div class="about-container">
+                <div class="about-me-title">
+                    <h2>About Me</h2>
+                </div>
+                <div class="about-me-txt">
+                    <p>Temp Text......</p>
+                </div>
             </div>
         </div>
     </div>
