--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -13,7 +13,8 @@
                     <h2>About Me</h2>
                 </div>
                 <div class="about-me-txt">
-                    <p>Temp Text......</p>
+                    <p>Hi, I'm Craig, an Artificial Intelligence and Computer Science Undergrad at The University of Birmingham.
+                    </p>
                 </div>
             </div>
         </div>
